# PythonProject3-2

./: .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: index.html
logs/: mylog.txt
processing/: sort_by_date.py
project/: bank_project1.rar  bank_project2.rar  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_filter_by_state.py  test_generators.py  test_get_date.py  test_masks.py  test_processing.py  test_widget.py
widget/: mask_account_card.py
